# MKWStatsBot

./: .coderabbit.yaml  .gitignore  CLAUDE_TOKEN_OPTIMIZATION_REPORT.md  DASHBOARD_DEPLOYMENT.md  LICENSE  README.md  SS_TIER_PR_REVIEW_SETUP.md  USER_GUIDE.md  env_example.txt  init_github.sh  main.py  mkw_stats_bot_architecture.puml  railway.toml  requirements.txt  run.sh
.claude/agents/: discord-bot-debugger.md
.github/workflows/: claude-code-review.yml  claude.yml
docs/: SETUP_GUIDE.md
mkw-dashboard-api/: .env.example  Dockerfile  main.py  railway.toml  requirements.txt
mkw-dashboard-api/app/: __init__.py  config.py  database.py
mkw-dashboard-api/app/auth/: __init__.py
mkw-dashboard-api/app/models/: __init__.py
mkw-dashboard-api/app/routes/: __init__.py  auth.py  bulk.py  guild.py  players.py  stats.py  wars.py
mkw-review-web/: .env.example  package-lock.json  package.json  railway.toml  tailwind.config.js
mkw-review-web/src/app/: layout.tsx  page.tsx  providers.tsx
mkw-review-web/src/app/auth/callback/: page.tsx
mkw-review-web/src/app/dashboard/: layout.tsx  page.tsx
mkw-review-web/src/app/dashboard/leaderboard/: page.tsx
mkw-review-web/src/app/dashboard/players/: page.tsx
mkw-review-web/src/app/dashboard/wars/: page.tsx
mkw-review-web/src/app/review/[token]/: page.tsx
mkw-review-web/src/lib/: api.ts  auth.tsx
mkw_stats_bot/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.railway  PROJECT_AI_README.md  PROJECT_PLAN.md  RAILWAY_SETUP.md  README.md  REORGANIZATION_SUMMARY.md  __init__.py  coordinate_picker.py  init_simple_db.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  railway_startup.py  region_selector.py  render-build.sh  render.yaml  requirements-dev.txt  requirements-paddle.txt  requirements.txt  run.sh  test_ocr_parsing.py  test_paddlex_install.py  verify_opencv.py
mkw_stats_bot/admin/: README.md  check_database.py  debug_nickname_resolution.py  fix_missing_players.py  fix_specific_players.py  setup_players.py  test_nickname_fix.py
mkw_stats_bot/data/formats/: README.md  ice_mario.json  selected_regions.json
mkw_stats_bot/docker/: Dockerfile
mkw_stats_bot/docs/: DATABASE_MANAGEMENT.md  DATABASE_V2_MIGRATION.md  QUICKSTART.md  README_PlantUML.md  class_diagram.puml  component_diagram.puml  sequence_diagram.puml
mkw_stats_bot/management/: __init__.py  check_database.py  manage_nicknames.py  reset_database.py
mkw_stats_bot/mkw_stats/: __init__.py  bot.py  commands.py  config.py  constants.py  dashboard_client.py  database.py  logging_config.py  ocr_config_manager.py  ocr_modals.py  ocr_performance_monitor.py  ocr_processor.py  ocr_processor_paddle.py  ocr_processor_tesseract_backup.py  ocr_resource_manager.py  types.py
mkw_stats_bot/mkw_stats/handlers/: __init__.py  bulk_scan_handler.py  confirmation_manager.py  message_manager.py  ocr_handler.py
mkw_stats_bot/mkw_stats/repositories/: __init__.py  base.py  guild_repository.py  player_repository.py  stats_repository.py  war_repository.py
mkw_stats_bot/mkw_stats/services/: __init__.py  war_service.py
mkw_stats_bot/mkw_stats/utils/: __init__.py  embed_builder.py  formatters.py  validators.py
mkw_stats_bot/scripts/: README.md  delete_invalid_wars.py  setup_dev.py
mkw_stats_bot/scripts/utilities/: cleanup_database.py  delete_table.py  get_guild_from_war.py  init_simple_db.py  list_guilds.py  migrate_add_ally_status.py  migrate_add_bulk_scan_failures.py  migrate_add_cached_metrics.py  migrate_add_dashboard_tables.py  migrate_add_discord_user_ids.py  migrate_add_member_status.py  migrate_add_player_stats.py  migrate_add_player_war_performances.py  migrate_add_team_nicknames.py  migrate_add_team_tags.py  migrate_fractional_wars.py  migrate_increase_war_count_precision.py  migrate_to_unified_players.py  recalculate_team_differentials.py  setup_dev.py  test_quote_parsing.py  test_roster_commands.py  test_team_nicknames.py
mkw_stats_bot/testing/: __init__.py  test_cached_metrics.py  test_database.py  test_ocr.py
sample_images/: regions_Table.json
src/: __init__.py  bot.py  config.py  database.py  ocr_processor.py
testing/: test_full_debugocr.py
testing/ocr_edge_cases/: example_debugocr_output.txt
utils/: __init__.py  region_selector.py  setup_discord.py  setup_preset.py  test_ocr.py
